# Rafaradio

./: .gitignore  README.md  package.json  start.js
dist-installer/: MineRadioPlayer Setup 0.1.0.exe.blockmap  RafaRadio Setup 0.1.0.exe.blockmap  builder-debug.yml  builder-effective-config.yaml  latest.yml
dist-installer/win-unpacked/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
dist-installer/win-unpacked/resources/: app-update.yml  firebase-applet-config.json
src/: lyrics-service.js  main.js  preload.js
src-taurin/: Cargo.toml  tauri.conf.json
src-taurin/capabilities/: default.json
src-taurin/src/: main.rs  proxy.rs  ytmusic.rs
src/components/: Navigation.js  PlaybackEngine.js  SearchStage.js  Visualizer3D.js
src/main/: index.js  ipc-handlers.js  proxy-server.js  window.js
src/renderer/: index.html  lyrics-sync.js  lyrics-visualizer.js  renderer.js  style.css
src/renderer/js/: app.js  audio.js  bpm-detector.js  cloud.js  controls.js  lyrics.js  particles.js  playlists.js  state.js
src/shared/: lyrics-service.js  youtube-utils.js  ytdlp-manager.js
