[package]
name = "rafaradio"
version = "2.0.0"
description = "High-performance Tauri v2 + Vite + Vanilla JS/TS visual music player"
authors = ["ic3p4nda"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.6" }
tower-http = { version = "0.4", features = ["cors"] }
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.3", features = ["v4"] }
url = "2.4"
lazy_static = "1.4"
